--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unleash-client",
-  "version": "3.7.1",
+  "version": "4.0.0",
   "description": "Unleash Client for Node",
   "license": "Apache-2.0",
   "main": "./lib/index.js",
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/Unleash/unleash-client-node",
   "dependencies": {
     "ip": "^1.1.5",
+    "localforage": "^1.9.0",
     "make-fetch-happen": "^8.0.14",
     "murmurhash3js": "^3.0.1"
   },
