--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "unleash-client",
+  "name": "@monosolutions/unleash-client",
   "version": "4.0.0",
   "description": "Unleash Client for Node",
   "license": "Apache-2.0",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "postversion": "./scripts/update-build-details.sh",
     "lint": "eslint .",
@@ -16,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@github.com:Unleash/unleash-client-node.git"
+    "url": "git@github.com:monosolutions/unleash-client-javascript.git"
   },
   "keywords": [
     "unleash",
