--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./lib",
-    "lib": ["es5", "es6"],
+    "lib": ["dom", "es5", "es6"],
     "target": "es5",
     "module": "es2015",
     "sourceMap": true,
